--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ wheels/
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+pip-selfcheck.json
 
 # Unit test / coverage reports
 htmlcov/
@@ -99,3 +100,7 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+bin/
+include/
+local/
